<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_section_history"
        android:title="@string/menu_title_feedback"
        android:icon="@drawable/ic_history"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_main_section_settings"
        android:title="@string/menu_title_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

</menu>